<?xml version="1.0" encoding="utf-8"?>
<resources>

<!-- 
    <string name="add_item_menu">\n\n\nActivate menu to create item</string>
 -->
    
    
    <string name="app_name">iDisaster</string>
    
	<string name="dialogCancel">Cancel</string>
    <string name="dialogOK">OK</string>
    <string name="dialogFeedInsertException">EXCEPTION:\nCannot store the new activity in SocialProvider.</string>
    <string name="dialogFeedQueryException">EXCEPTION:\nCannot retrieve activities from SocialProvider.</string>
    <string name="dialogInstall">Install</string>
    <string name="dialogMemberQueryException">EXCEPTION:\nCannot retrieve members from SocialProvider.</string>
    <string name="dialogNotInstalled">client is not installed on this device.</string>
    <string name="dialogPeopleQueryException">EXCEPTION:\nCannot retrieve information in people registry from SocialProvider.</string>
    <string name="dialogQueryException">EXCEPTION:\nCannot retrieve information from SocialProvider.</string>
	<string name="dialogServiceDetailsQueryException">EXCEPTION:\nCannot retrieve service information from SocialProvider.</string>
	<string name="dialogServiceDownloadException">EXCEPTION:\nCannot downlad the service. Check your internet connection. </string>
	<string name="dialogServiceLaunchException">EXCEPTION:\nCannot launch the service. Try a manual launch. </string>
	<string name="dialogServiceQueryException">EXCEPTION:\nCannot retrieve services from SocialProvider </string>
    <string name="dialogSocialProviderException">EXCEPTION:\nSocialProvider is not installed.You should install SocialProvider and then re-install iDisaster.</string>
	
    <string name="disaster_list_add_item">\n\n\nActivate menu to create a new team</string>
    <string name="disaster_list_menu_createCommunity">Create disaster team</string>
	<string name="disasterListDialogCIS">No teams yet. Select menu to add teams.</string>
    <string name="disasterListHeading">Disaster teams</string>
    <string name="disasterListTestDialog">The application is in DisasterList Activity.</string>
	
    
    <string name="emptyText"></string>
    <string name="noPreference">n/a</string>

    <string name="disaster_menu_add_feed">Add activity</string>
<!--     
    <string name="disaster_menu_add_service">Add service</string>
-->
    <string name="disaster_menu_add_member">Add member</string>
    <string name="disaster_menu_recommend_service">Recommend service</string>
    <string name="disaster_menu_selectDisaster">Select new team</string>

    <string name="disasterCreateButton">Create</string>
    <string name="disasterCreateDialog">Please re-enter the team name and description.</string>
    <string name="disasterCreateHeading">New disaster team</string>
    <string name="disasterCreateDescriptionHint">Description</string>
    <string name="disasterCreateDescriptionLabel">Description:</string>
    <string name="disasterCreateTestDialog">The application is in NewDisaster Activity.</string>
    <string name="disasterCreateNameHint">Team name</string>
    <string name="disasterCreateNameLabel">Name:</string>

    <string name="disasterHeading">Selected team</string>

    <string name="feedAddButton">Add activity</string>
    <string name="feedAddCommunityPending">Team info not yet synchronised. Wait before adding an activity.</string>
    <string name="feedAddHeading">Edit Activity</string>
	<string name="feedCancelButton">Cancel</string>
	<string name="feedContentHint">Enter a short status</string>
	<string name="feedContentLabel">Status:</string>
	
	<string name="feedListNoActivity">No activity yet</string>
	
    <string name="loginButton">Log In</string>
    <string name="loginDialog">Please re-enter your user name and password.</string>
    <string name="loginEmailHint">knut@redcross.org</string>
    <string name="loginEmailLabel">Email:</string>
    <string name="loginHeading">iDisaster</string>
    <string name="loginInfo">Sign up for Societies.</string>
<!-- <string name="loginPasswordHint">Password</string> -->
    <string name="loginPasswordHint">*********</string>    
    <string name="loginPasswordLabel">Password:</string>
<!-- <string name="loginUserNameHint">Name</string>  -->
    <string name="loginUserNameHint">Knut Roedhale</string>
    <string name="loginUserNameLabel">Name:</string>
<!-- <string name="loginUserNameLabel">Login as:</string>  -->

<!-- <string name="memberListDialog">No members yet. Select menu to add members.</string>  -->
	<string name="member_list_add_item">\n\n\nActivate menu to add new members</string>

	<string name="memberAddButton">Add member(s)</string>
    <string name="memberAddHeading">Select new members</string>
	<string name="memberAddNoPeople">No people to add</string>
	
	<string name="service_list_add_item">\n\n\nActivate menu to recommend new services</string>
	
	<string name="serviceAddButton">Add service(s)</string>
    <string name="serviceAddHeading">Select new services</string>
	<string name="serviceAddNoService">No service to add</string>
    <string name="serviceDetailsHeading">Service information</string>
    <string name="serviceDescriptionHint">Enter keywords</string>
    <string name="serviceDescriptionLabel">Description:</string>
    <string name="serviceListDialog">No services in the repository yet.</string>
    <string name="serviceListDialogCIS">No services yet. Select menu to add services.</string>
    <string name="serviceNameHint">Service name</string>
    <string name="serviceNameLabel">Name:</string>
	<string name="serviceRecommendButton">Recommend service(s)</string>
    <string name="serviceRecommendHeading">Select new services</string>
	<string name="serviceRecommendNoService">No service to recommend</string>
    <string name="serviceStatusLabel">Status:</string>

    <string name="sharedServiceLabel">Service shared by: ... in ...</string>
    <string name="sharedServiceNone">\n\n\nNo service shared by this member</string>
    	
    <string name="startButton">Start</string>
    <string name="start_menu_logoff">Log off</string>
    <string name="startTestDialog">The application is in Start Activity.</string>
    <string name="startInfoLogged">You are logged as </string>
    <string name="startInfoNoAccount">You cannot be logged in:\nCreate an account for box.com.</string>
    <string name="startInfoNotLogged">You cannot be logged in.</string>   
    <string name="startInfoUserNotRegistered">You cannot be logged in:\nRun populateUbiShare\nThen create an account for box.com.</string>
 
    <string name="toastFeedContent">Please enter a short status.</string>
    <string name="toastUserName">Please enter a user name.</string>
    <string name="toastPassword">Please enter a password.</string>
    <string name="toastDisasterName">Please enter a disaster name.</string>
    <string name="toastDisasterDescription">Please enter a disaster description.</string>
    <string name="toastMemberName">Please enter a user name.</string>
    <string name="toastMemberDescription">Please enter keywords.</string>
    <string name="toastServiceName">Please enter a service name.</string>
    <string name="toastServiceDescription">Please enter keywords.</string>
    <string name="toastServiceDetailsDownload">Please wait while service is downloaded.</string>
    
    
</resources>
