<?xml version="1.0" encoding="utf-8"?>
 
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent">

 		<TextView android:id="@+id/serviceDetailsLabel" android:layout_width="fill_parent"
     		android:text="@string/serviceDetailsHeading" 
     		android:textSize="20dip" android:textStyle="bold"
     		android:textColor="@color/white" android:background="@color/orange"
			android:layout_height="wrap_content" 
			android:paddingLeft="5dip"
			android:paddingTop="2dip" android:paddingBottom="2dip" />
 				
	 	<TableLayout android:id="@+id/serviceDetailsTable"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_below="@id/serviceDetailsLabel"
			android:background="@color/white"
			>
			
			<TableRow>
				<TextView android:id="@+id/showServiceDetailsNameLabel"
					android:text="@string/serviceNameLabel" android:textColor="@color/black"
					android:textStyle="bold" android:width="100dp" 
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:paddingLeft="2dip" android:paddingRight="2dip"
					android:paddingTop="2dip" android:paddingBottom="2dip" 
					/>

				<!-- Not sure if android:text is needed below -->
				<TextView
				    android:id="@+id/showServiceDetailsName"
				    android:text="@string/emptyText" android:textColor="@color/black"
				    android:layout_width="wrap_content" android:layout_height="wrap_content"
				    android:paddingLeft="2dip" android:paddingRight="2dip"
				    android:paddingTop="10dip" android:paddingBottom="10dip" 
				    />
				
			</TableRow>

			<TableRow>

				<TextView
				    android:id="@+id/showServiceDetailsDescriptionLabel"
				    android:text="@string/serviceDescriptionLabel" android:textColor= "@color/black" 
					android:textStyle="bold" android:width="100dp" 
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:paddingLeft="2dip" android:paddingRight="2dip"
					android:paddingTop="2dip" android:paddingBottom="2dip" 
					/>

				<!-- Not sure if android:text is needed below -->
				<TextView
				    android:id="@+id/showServiceDetailsDescription"
				    android:text="@string/emptyText" android:textColor="@color/black"
				    android:layout_width="wrap_content" android:layout_height="wrap_content"
				    android:paddingLeft="2dip" android:paddingRight="2dip"
				    android:paddingTop="10dip" android:paddingBottom="10dip" />
			</TableRow>
 						
		</TableLayout> 
 
	</RelativeLayout>
 